
Thursday Evening, April 17th, 2015
----------------------------------

    Added entity_index to add object for physics.

    This is necessary because authority interaction needs to walk physics object
    and get back to entity index, so we need a mapping physics_index -> entity_index.

    This is best done inside the physics manager.

    To do this need a mapping from physics index back to entity index.

    Added code to pass the entity index into the physics add cube.

    Seems that the render is not gamma correct? Linear? Why?

    Forgot to enable SRGB framebuffer.

    Increased max iterations to 64 because without that there is sliding and other bullshit.

    Will just have to deal with the additional CPU cost.

    Added some code to taper down the amount of bobbing force upwards. It's still vibrant though and higher than before.


Sunday Evening, April 12th, 2015
--------------------------------

    Added authority int and authority time to entity manager. 

    Seems overkill to have a separate authority manager.

    Fixed up cube game code to modify these authority via get/set authority on entity manager.

    Added code to force player objects to be forced to have their own authority each update.

    Quickly hack up code that colors cubes according to authority, ignoring blending.

    Whenever authority is set to a non-zero value, clear the authority time to 0.

    Implement code to walk over all cubes, for cubes that are at rest but have non-zero
    authority, increment authority time by dt.

    Once authority time exceeds AuthorityThreshold return to 0 authority and clear
    authority time.

    Fixed a bug with at rest that was breaking this. Setting object state each frame
    was happening, and it was clearing at rest flag for everything. 

    This probably also explains perf problems.


Sunday Afternoon, April 12th, 2015
----------------------------------

    Bring back player cube linear bobbing. Retune it.
